# SRW__ClientServerCommunication

./: CMakeLists.txt  LICENSE.txt  README.md
SRW__ClientServerCommunication/: CMakeLists.txt
SRW__ClientServerCommunication/Client/: Client.cpp
SRW__ClientServerCommunication/Server/: LinuxServer.h  MSWindowsServer.cpp  MSWindowsServer.h  RunServer.cpp  Server.cpp  Server.h  ServerClient.h
